--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -89,6 +89,9 @@
     .header__setting-noti-text{
         font-size: 16px;
     }
+    .app__content-title-type{
+        padding-left: 40px;
+    }
 }
 
 @media (min-width: 410px) and (max-width: 739px)
